hphp/hack/test/typecheck/strict_switch/just_null.php.exp
File "just_null.php", line 13, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `null` (Typing[4019])
File "just_null.php", line 14, characters 10-11:
Case in `switch` must be either an enum constant or a literal expression. (Typing[4020])
File "just_null.php", line 20, characters 11-12:
All cases already covered; a redundant `default` case prevents detecting future errors. If your goal is to guard against invalid values for this type, do an `is` check before the switch. (Typing[4022])
  File "just_null.php", line 23, characters 5-12:
  default declared here
